# dpvt-experiments-1

./: .gitignore  CLAUDE.md  README.md  debug_memory.py  environment.yml  pixi.toml  pyproject.toml  setup.py
data/: benchmark_test.p  benchmark_train.p  larch_alisim_alignment_10_seq_20_sites_100_algnmnts.p  larch_alisim_alignment_10_seq_20_sites_100_algnmnts_spr.p  larch_alisim_alignment_10_seq_20_sites_100_algnmnts_subtree.p  larch_alisim_alignment_10_seq_20_sites_100_algnmnts_uniform.p  larch_alisim_alignment_10_seq_20_sites_50_algnmnts.p  larch_alisim_alignment_10_seq_20_sites_50_algnmnts_spr.p  larch_alisim_alignment_10_seq_20_sites_50_algnmnts_subtree.p  larch_alisim_alignment_10_seq_20_sites_50_algnmnts_treesearch_mimic.p  larch_alisim_alignment_10_seq_20_sites_50_algnmnts_uniform.p
docs/: issue52_updated_results.md  quantify_labeling_plan.md  quantify_phangorn_larch_comparison_plan.md  treesearch_training_ideas.md
dpvtex/: data_properties_perfect_phylogenies.ipynb  dpvt_data.py  dpvt_zoo.py  evaluate_individual_trees.py  plotting.py  treesearch_plots.py
larch/: README.md  environment.yml
notebooks/: test_models.ipynb  tests.ipynb
perfect_phylogenies/: perfect_phylogeny.py  perturb_phylogeny.py  utils.py
train/: ..data  Snakefile  aggregate_logs.ipynb  benchmark_config.yaml  check_data_nicknames.py  compare_runtimes.ipynb  config.yaml  config_local.yaml  data_nicknames.json  data_nicknames_local.json  delete_early_ckpts.py  different_perturbation_config.yaml  fix-dates.py  manual_training.py  my_config.yaml  my_data_nicknames.json  new_config.yaml  (+13 more)
(+140 files in other folders)
