[build-system]
requires = ["setuptools>=77.0,<81.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dpvtex"
version = "0.1.0"
description = "Deep neural networks for Phylogenetics Via Traversals - experiments"
authors = [
    {name = "Matsen Group", email = "ematsen@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "click",
    "ete3>=3.0.0",
    "lightning>=2.2.0",
    "pytest>=7.3",
    "torch>=2.0.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/matsengrp/dpvt.git"
Repository = "https://github.com/matsengrp/dpvt.git"

[tool.setuptools.packages.find]
where = ["."]
